syntax = "proto3";

package Classroom;

option go_package = "/pb";

import "proto/classroom_message.proto";
import "proto/common_message.proto";

service ClassroomService {
    rpc CreateClassroom(Classroom.CreateClassroomRequest) returns (Classroom.ClassroomResponse);
    rpc GetClassroomById(CommonMessage.Id) returns (Classroom.ClassroomResponse);
    rpc GetClassroomByName(CommonMessage.Name) returns (Classroom.ClassroomResponse);
    rpc UpdateClassroom(Classroom.UpdateClassroomRequest) returns (Classroom.ClassroomResponse);
    rpc DeleteClassroom(CommonMessage.Id) returns (CommonMessage.Id);
    rpc JoinClass(CommonMessage.Id) returns (Classroom.StudentClassResponse);
    rpc AddStudent(Classroom.AddStudentRequest) returns (Classroom.StudentClassResponse);
    rpc DeleteStudentInClass(Classroom.DeleteStudentInClassRequest) returns (Classroom.StudentClassResponse);
    rpc Students(CommonMessage.Id) returns (Classroom.StudentsResponse);
    rpc JoinRequest(CommonMessage.Id) returns (Classroom.JoinClassRequestsResponse);
    rpc UpdateJoinRequest(CommonMessage.Id) returns (Classroom.StudentClassResponse);
    rpc DeleteJoinRequest(CommonMessage.Id) returns (Classroom.StudentClassResponse);
}